--- a/Exercise 0/1234.md
+++ b/Exercise 0/1234.md
@@ -6,6 +6,7 @@
 
 
 
+
 #### Open your Powershell console
 Run below command 
 
@@ -38,7 +39,7 @@ Server:
 #### Once validated download the Zeppelin Docker file
 Run below command 
 ```bash
-docker run -p 19999:8080 -v $PWD/data:/zeppelin/data -v $PWD/logs:/logs --rm --name zeppelin_single apache/zeppelin:0.8.1 
+ docker run -p 19999:8080 -v data:/zeppelin/data -v logs:/logs --rm --name zeppelin_single apache/zeppelin:0.8.1
 ```
 ```bash
 0.8.1: Pulling from apache/zeppelin
